[package]
name = "mruby-compiler2-sys"
version = "0.1.0"
edition = "2024"
authors = ["Uchio Kondo <udzura@udzura.jp>", "Hitoshi Hasumi", "prism developers"]
description = "mruby-compiler2 bindings for Rust"
license-file = "LICENSE"
include = [
    "**/*.rs",
    "Cargo.toml",
    "vendor/*",
    "lib/.keep",
]

[dependencies]

[build-dependencies]
bindgen = ">= 0"
cc = ">= 1"
glob = ">= 0"