[package]
name = "mruby-compiler2-sys"
version = "0.2.2"
edition = "2024"
authors = [
    "Uchio Kondo <udzura@udzura.jp>",
    "Hitoshi Hasumi",
    "prism developers",
]
description = "mruby-compiler2 bindings for Rust"
license-file = "LICENSE"
include = [
    "src/lib.rs",
    "build.rs",
    "examples/*.rs",
    "Cargo.toml",
    "vendor/*",
    "lib/.keep",
]

[dependencies]
libc = { version = "0.2.177", optional = true }

[build-dependencies]
bindgen = ">= 0"
cc = ">= 1"
glob = ">= 0"

[features]
default = ["std"]
std = ["dep:libc"]
no-std = []
